# 3DSDLRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  all.sh  main.cpp  run.sh
custom/: CMakeLists.txt  putPixel.cpp  shader.cpp  shapes.cpp  vectormath.cpp  viewport.cpp
custom/include/: constants.h  putPixel.h  shader.h  shapes.h  vectormath.h  vectors.h  viewport.h
include/: constants.h  lights.h  materials.h  matrix.h  objects.h  objects_new.h  putPixel.h  shader.h  shapes.h  skybox.h  spectrum.h  vectors.h  viewport.h
src/: matrix.cpp  putPixel.cpp  shader.cpp  skybox.cpp  viewport.cpp
